# libdns

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  client.cc  config.h.in
CMake/: FindLibreSSL.cmake
example/: main.cc
include/libdns/: client.h
lib/: CMakeLists.txt
test/: 1_epoll.cc  2_ssl.cc  3_client.cc  4_query.cc  5_https_request.cc  6_request_binary_file.cc  https_request.cc  query.cc
